<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">飞派员</string>
    <string name="hello_world">Hello world!</string>
    <string name="remind_title">提醒</string>
    <string name="qiangdan_title">飞派员</string>
    <string name="my_setting">设置</string>
    <string name="modify_password">密码修改</string>
    <string name="sound">声音</string>
    <string name="feed_back">我要吐槽</string>
    <string name="check_update">检查更新</string>
    <string name="sign_out">退出当前账号</string>
    <string name="reminded">新订单提醒</string>
    <string name="vibration">震动</string>
    <string name="map_title">地图</string>
    <string name="my_title">我的</string>
    <string name="total_income">帐号余额（元）</string>
    <string name="number">0</string>
    <string name="month_income">可提余额（元）</string>
    <string name="yesterday_income">昨日收入（元）</string>
    <string name="my_order">我的订单</string>
    <string name="dan">单</string>
    <string name="default_number">0</string>
    <string name="my_cash">现金账户</string>
    <string name="cash_unit">元</string>
    <string name="award_list">奖惩记录</string>
    <string name="award_unit">次</string>
    <string name="other_title">其他</string>
    <string name="reference_title">飞派员手册</string>
    <string name="activity_loading">正在加载订单...</string>
    <string name="activity_error">加载失败</string>
    <string name="tel_number_title">客服电话</string>
    <string name="tel_number">021-20375685</string>
    <string name="dial_tel">拨打电话</string>
    <string name="have_no_order">暂无订单，注意新订单推送消息！</string>
    <string name="qiang_dan"> 抢 单 </string>
    <string name="wait_order">新订单</string>
    <string name="handler_order">执行中订单</string>
    <string name="trans_bicycle">电动车</string>
    <string name="trans_motor">汽车</string>
    <string name="trans_bus">公交</string>
    <string name="trans_hint">如果抢单成功后30分钟不能到达客户取件，你的飞派评级将会降低，接单成功率会随之下降，严重者将会被关禁闭，禁闭期间不能接单</string>
    <string name="next_step">下一步</string>
    <string name="handlerhave_no_order">暂无待处理订单！</string>
    <string name="code_hint">请输入验证码</string>
    <string name="send_code">发送验证码</string>
    <string name="no_order">新订单：0 单</string>
    <string name="handler_no_order">执行中：0 单</string>
    <string name="call_custom">致电对方</string>
    <string name="look_map">查  看  地  图</string>
    <string name="loading">正在同步订单</string>
    <string name="check_order">查看订单详情，并取件</string>
    <string name="my_history_order">已完成订单</string>
    <string name="have_no_historyorder">暂无已完成订单</string>
    <string name="my_crash_count">现金账户</string>
    <string name="your_bank_cards">你的支付宝信息</string>
    <string name="apply_for">提  现</string>
    <string name="my_reward">奖惩记录</string>
    <string name="edit_content_cancel_title">是否放弃编辑该内容?</string>
    <string name="edit_content_cancel">放弃</string>
    <string name="edit_content_continue">继续编辑</string>
    <string name="new_password">现有密码</string>
    <string name="setting_new_password">设置新密码</string>
    <string name="repeat_new_password">重复新密码</string>
    <string name="submit">提 交</string>
    <string name="conmmen_question">常见问题</string>
    <string name="offine_map">离线地图</string>
    <string name="download">下载管理</string>
    <string name="city_list">城市列表</string>
    <string name="updateinfor">飞派员更新信息</string>
    <string name="update">更新</string>
    <string name="cancel">取消</string>
    <string name="sunmit_tips">请输入金额：</string>
    <string name="chong_zhi">充  值</string>
    <string name="trans_list">转账记录</string>
    <string name="look_details">查看详情</string>
    <string name="my_history_trans">转账记录</string>
    <string name="have_no_historytrans">暂无转账记录</string>
    <string name="oprer_hint">操作提示</string>
    <string name="is_acccept">是否接单?</string>
    <string name="shi">是</string>
    <string name="no">否</string>
    <string name="my_total_income">总收入（元）</string>
    <string name="my_month_income">本月收入（元）</string>
    <string name="my_recharge">充 值</string>
    <string name="photograph_hint">若时间紧急，你可以选择将位置拍照上传，也可以先拍照，待有时间再上传</string>
    <string name="update_location">上传位置</string>
    <string name="choice_aibum">从相册中选择</string>
    <string name="choice_camera">拍照</string>
</resources>
