<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/titile_color">

        <ImageButton
            android:id="@+id/return_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dip"
            android:background="@color/transparent"
            android:src="@drawable/icon_return"
            android:layout_centerVertical="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/titile_color"
            android:gravity="center"
            android:text="@string/tel_number_title"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </RelativeLayout>
    <TextView
        android:id="@+id/textview_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dip"
        android:padding="20dip"
        android:background="@color/white"
        android:text="@string/tel_number"
        android:textColor="@color/black"
        android:textSize="38sp"
        android:gravity="center"/>
<Button
    android:id="@+id/button_dial_tel"
    android:layout_width="match_parent"
    android:layout_height="56dip"
    android:layout_margin="16dip"
    android:background="@drawable/corner_button"
    android:text="@string/dial_tel"/>
</LinearLayout>