<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/titile_color">

        <ImageButton
            android:id="@+id/about_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dip"
            android:background="@color/transparent"
            android:src="@drawable/icon_return" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/titile_color"
            android:gravity="center"
            android:text="@string/my_crash_count"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/my_background"
        android:orientation="horizontal"
        android:paddingTop="30dip"
        android:paddingBottom="30dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/total_income"
                android:textColor="@color/income_color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/total_income_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/number"
                android:textColor="@color/number_color"
                android:textSize="28sp" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/month_income"
                android:textColor="@color/income_color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/use_income_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/number"
                android:textColor="@color/number_color"
                android:textSize="28sp" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dip"
        android:text="@string/your_bank_cards"
        android:textSize="18sp"
        android:textColor="#0da945"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dip"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_zhifubao"
            android:scaleType="center"/>
        <TextView
            android:id="@+id/your_acout_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dip"
            android:gravity="left"
            android:textSize="19dp"
            android:textColor="@color/light_grey"/>
        </LinearLayout>
    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="100dip"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:padding="8dp"
        android:textSize="20sp"
        android:text="@string/apply_for"
        android:textColor="@color/white"
        android:background="@drawable/corner_button"/>
    <Button
        android:id="@+id/recharge_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:padding="8dp"
        android:textSize="20sp"
        android:text="@string/chong_zhi"
        android:textColor="@color/white"
        android:background="@drawable/corner_button"/>
</LinearLayout>
