<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/feed_item_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/titile_color">

        <ImageButton
            android:id="@+id/about_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dip"
            android:background="@color/transparent"
            android:src="@drawable/icon_return"
            android:layout_centerVertical="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/titile_color"
            android:gravity="center"
            android:text="@string/my_setting"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:layout_marginLeft="22dip"
                android:padding="4dip"
                android:text="@string/reminded"
                android:textColor="@color/titile_color"
                android:textSize="18sp" />

            <RelativeLayout
                android:id="@+id/clear_catch_layout"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@color/white">

                <TextView
                    style="@style/TextSetting"
                    android:text="@string/sound" />

                <feipai.qiangdan.view.CheckSwitchButton
                    android:id="@+id/setting_sound"
                    style="@style/SwitchView"
                    android:enabled="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="1dp"
                android:background="@color/white">

                <TextView
                    style="@style/TextSetting"
                    android:text="@string/vibration" />

                <feipai.qiangdan.view.CheckSwitchButton
                    android:id="@+id/setting_vibration"
                    style="@style/SwitchView"
                    android:enabled="true" />

            </RelativeLayout>




            <RelativeLayout
                android:id="@+id/sign_out_layout"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="32dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="22dp"
                    android:text="@string/sign_out"
                    android:textColor="@color/red"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>