<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:scrollbars="none">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/titile_color">

        <ImageButton
            android:id="@+id/return_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dip"
            android:background="@color/transparent"
            android:src="@drawable/icon_return"
            android:layout_centerVertical="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/titile_color"
            android:gravity="center"
            android:text="@string/modify_password"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:layout_marginTop="32dp">

        <EditText
            android:id="@+id/modify_password_now"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/corner_edit"
            android:cursorVisible="true"
            android:drawableLeft="@drawable/transparent"
            android:drawablePadding="8dp"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:paddingLeft="6dp"
            android:singleLine="true"
            android:textColor="@color/address_title_color"
            android:textColorHint="@color/hintcolor"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/modify_password_setting_new"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/corner_edit"
            android:cursorVisible="true"
            android:drawableLeft="@drawable/transparent"
            android:drawablePadding="8dp"
            android:hint="@string/setting_new_password"
            android:inputType="textPassword"
            android:paddingLeft="6dp"
            android:singleLine="true"
            android:textColor="@color/address_title_color"
            android:textColorHint="@color/hintcolor"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/modify_password_repeat"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/corner_edit"
            android:cursorVisible="true"
            android:drawableLeft="@drawable/transparent"
            android:drawablePadding="8dp"
            android:hint="@string/repeat_new_password"
            android:inputType="textPassword"
            android:paddingLeft="6dp"
            android:singleLine="true"
            android:textColor="@color/address_title_color"
            android:textColorHint="@color/hintcolor"
            android:textSize="16sp" />

        <Button
            android:id="@+id/modify_password_submit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/corner_button"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>
</ScrollView>