<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#80000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/my_background"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/edit_content_cancel_title"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#EDE9E3"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel_dialog_dismiss"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/edit_content_cancel"
                android:layout_weight="1"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#EDE9E3"/>

            <TextView
                android:id="@+id/cancel_dialog_continue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/edit_content_continue"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>