<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#60000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/my_background">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="18sp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/edit_content_cancel_title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#30000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/edit_cancel_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#90FFFFFF"
                android:textSize="16sp"
                android:text="@string/edit_content_cancel" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#30000000" />

            <TextView
                android:id="@+id/edit_continue_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="#70FFFFFF"
                android:text="@string/edit_content_continue" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>